[gd_scene load_steps=14 format=3 uid="uid://3c6msb02l5p2"]

[ext_resource type="Script" path="res://scripts/match_editor.gd" id="1_7kurb"]
[ext_resource type="StyleBox" uid="uid://ixt5lyof837o" path="res://resources/styles/background_panel.tres" id="2_2xwvy"]
[ext_resource type="FontVariation" uid="uid://bt4v0q31h0w7t" path="res://resources/fonts/default-bold.tres" id="3_7nhsb"]
[ext_resource type="PackedScene" uid="uid://cr67efsdcqrfo" path="res://scenes/player_input.tscn" id="5_ll5ge"]
[ext_resource type="PackedScene" uid="uid://xb36j1n1p3wm" path="res://scenes/override_panel.tscn" id="6_480u8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wv27c"]
content_margin_right = 4.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ck1ft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ecn1"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.141176, 0.141176, 0.141176, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.075, 0.3, 0.075, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wqc6m"]
content_margin_left = 12.0
content_margin_right = 12.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_uojpb"]
color = Color(1, 1, 1, 0.4)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25hn4"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.141176, 0.141176, 0.141176, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.075, 0.075, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ic58o"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.141176, 0.141176, 0.141176, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v8ii"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 5

[node name="MatchEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_7kurb")

[node name="EditorPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_2xwvy")

[node name="VBoxContainer" type="VBoxContainer" parent="EditorPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TitleBar" type="HBoxContainer" parent="EditorPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="CancelButton" type="Button" parent="EditorPanel/VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = "Cancel"

[node name="TitleLabel" type="Label" parent="EditorPanel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7nhsb")
text = "Edit Match"
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="EditorPanel/VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = "Save"

[node name="MarginContainer" type="MarginContainer" parent="EditorPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="EditorPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_wv27c")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Quota" type="HBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/Quota"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="QuotaLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/Quota"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7nhsb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ck1ft")
text = "Total:"

[node name="QuotaInput" type="LineEdit" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/Quota"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "100"

[node name="TableContainer" type="VBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="WinningScoreTable" type="PanelContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1ecn1")

[node name="VBoxContainer" type="VBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Labels" type="HBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7nhsb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wqc6m")
text = "Player"

[node name="WeightLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/font = ExtResource("3_7nhsb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wqc6m")
text = "Weight"

[node name="ResultLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/font = ExtResource("3_7nhsb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wqc6m")
text = "Result"

[node name="Panel" type="Panel" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_uojpb")

[node name="WinningPlayerInputs" type="VBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer"]
layout_mode = 2

[node name="PlayerInput" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer/WinningPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="PlayerInput2" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer/WinningPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="PlayerInput3" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer/WinningPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="PlayerInput4" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer/WinningPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="PlayerInput5" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/WinningScoreTable/VBoxContainer/WinningPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="LosingScoreTable" type="PanelContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_25hn4")

[node name="VBoxContainer" type="VBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Labels" type="HBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7nhsb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wqc6m")
text = "Player"

[node name="WeightLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/font = ExtResource("3_7nhsb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wqc6m")
text = "Weight"

[node name="ResultLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/font = ExtResource("3_7nhsb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wqc6m")
text = "Result"

[node name="Panel" type="Panel" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxLine_uojpb")

[node name="LosingPlayerInputs" type="VBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer"]
layout_mode = 2

[node name="PlayerInput" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer/LosingPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="PlayerInput2" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer/LosingPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="PlayerInput3" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer/LosingPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="PlayerInput4" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer/LosingPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="PlayerInput5" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/TableContainer/LosingScoreTable/VBoxContainer/LosingPlayerInputs" instance=ExtResource("5_ll5ge")]
layout_mode = 2

[node name="OverridesLabelContainer" type="HBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/OverridesLabelContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="OverridesLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/OverridesLabelContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7nhsb")
text = "Overrides"
vertical_alignment = 1

[node name="OverridePanel" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("6_480u8")]
layout_mode = 2

[node name="CommentsLabelContainer" type="HBoxContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/CommentsLabelContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="CommentsLabel" type="Label" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/CommentsLabelContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_7nhsb")
text = "Comments"
vertical_alignment = 1

[node name="CommentsPanel" type="PanelContainer" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ic58o")

[node name="CommentsInput" type="TextEdit" parent="EditorPanel/VBoxContainer/ScrollContainer/VBoxContainer/CommentsPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1v8ii")
theme_override_styles/focus = SubResource("StyleBoxFlat_1v8ii")
